tools/fleet/fixtures/packets/invalid/missing-context-sha.case
source=valid-work.packet
mutation=remove Context-SHA
expected=invalid
